# wasm-game-of-life

./: Cargo.toml  README.md
src/: lib.rs
tests/: web.rs
www/: index.html  package-lock.json  package.json  tsconfig.json  webpack.dev.js  webpack.prod.js
www/src/: bootstrap.ts  index.ts
